--- a/week1/todoList/styles.css
+++ b/week1/todoList/styles.css
@@ -5,15 +5,14 @@ body {
 
 .container {
     display: flex;
-    text-align: center;
-    /*justify-content: center;*/
+    justify-content: center;
     align-items: center;
     flex-direction: column;
 }
 
 .title {
-    margin: 80px 0;
-    background-color: antiquewhite;
+    margin-top: 80px;
+    margin-bottom: 100px;
 }
 
 hr {
@@ -25,43 +24,34 @@ hr {
 #todoInput {
     width: 700px;
     height:30px;
+    margin-bottom: 10px;
 }
 
 .todoContainer {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: space-between;
+    width: 700px;
 }
 
-.todo{
+.todo {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border: 1px black;
     width: 300px;
-    /*gap: 50px;*/
-    /*background-color: aquamarine;*/
     margin: 0 20px;
 }
 
 ul {
     padding: 0;
-    margin-bottom: 40px;
-    /*background-color: cornflowerblue;*/
+    margin: 0;
 }
 
 li {
     width: 150px;
     list-style: none;
     border-bottom: 3px solid #bfd6db;
-    padding-bottom: 5px;
     display: flex;
     justify-content: space-between;
-    /*background-color: aqua;*/
-}
-
-.todoItem .completedItem button {
-    background-color: #cae0e6;
-    color: black;
 }
