--- a/week1/todoList/styles.css
+++ b/week1/todoList/styles.css
@@ -49,9 +49,19 @@ ul {
 }
 
 li {
+    margin: 10px 0;
     width: 150px;
     list-style: none;
     border-bottom: 3px solid #bfd6db;
     display: flex;
     justify-content: space-between;
+    font-weight: bold;
+}
+
+
+.delete-btn .complete-btn {
+    background-color: #c7effc; /* 버튼 배경색 */
+    border: none; /* 테두리 없애기 */
+    border-radius: 3px; /* 테두리 반경 설정 */
+    color: black; /* 글씨색 검정으로 설정 */
 }
