--- a/조이-안지유/week1/todoList/styles.css
+++ b/조이-안지유/week1/todoList/styles.css
@@ -58,8 +58,17 @@ li {
     font-weight: bold;
 }
 
+/*.todoItem .completedItem button {*/
+/*    !*background-color: #cae0e6;*!*/
+/*    !*background-color: aquamarine;*!*/
+/*    background-color: #c7effc; !* 버튼 배경색 *!*/
+/*    border: none; !* 테두리 없애기 *!*/
+/*    border-radius: 3px; !* 테두리 반경 설정 *!*/
+/*    color: black; !* 글씨색 검정으로 설정 *!*/
+/*}*/
 
 .delete-btn .complete-btn {
+    /*background-color: #c7effc;*/
     background-color: #c7effc; /* 버튼 배경색 */
     border: none; /* 테두리 없애기 */
     border-radius: 3px; /* 테두리 반경 설정 */
