--- a/권도하/1주차/미션1/styles.css
+++ b/권도하/1주차/미션1/styles.css
@@ -64,42 +64,43 @@ input[type="password"] {
 
 .modalContainer {
     display: none;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.5);
-    align-items: center;
-    justify-content: center;
+    align-items: center; 
+    justify-content: center; 
 }
 
 .modal {
     display: none;
-    align-items: center;
+    align-items: center; 
     flex-direction: column;
-    justify-content: center;
+    justify-content: center; 
     width: 350px;
     height: 160px;
     background-color: white;
     border-radius: 3px;
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
 
+
 #modalTitle {
-    margin: 0;
+    margin-left: 140px;
+    margin-bottom:30px;
 }
 
 #modalText {
-    margin: 15px 0 20px 0;
+    margin-left: 80px;
+    margin-bottom:30px;
     font-size: 15px;
     font-weight: 600;
 }
 
 .modalButton {
     text-align: right;
+    margin-right: 10px;
+
 }
