--- a/조이-안지유/week1/validation/styles.css
+++ b/조이-안지유/week1/validation/styles.css
@@ -96,6 +96,7 @@ h2 {
 }
 
 .modal {
+    display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: center;
@@ -116,5 +117,7 @@ h2 {
 }
 
 .modalBtn {
-    text-align: right;
+    margin-left: auto;
+    margin-right: 20px;
+    margin-bottom: -15px;
 }
