--- a/조이-안지유/week1/todoList/styles.css
+++ b/조이-안지유/week1/todoList/styles.css
@@ -52,25 +52,17 @@ li {
     margin: 10px 0;
     width: 150px;
     list-style: none;
+    padding-bottom: 7px;
     border-bottom: 3px solid #bfd6db;
     display: flex;
     justify-content: space-between;
     font-weight: bold;
 }
 
-/*.todoItem .completedItem button {*/
-/*    !*background-color: #cae0e6;*!*/
-/*    !*background-color: aquamarine;*!*/
-/*    background-color: #c7effc; !* 버튼 배경색 *!*/
-/*    border: none; !* 테두리 없애기 *!*/
-/*    border-radius: 3px; !* 테두리 반경 설정 *!*/
-/*    color: black; !* 글씨색 검정으로 설정 *!*/
-/*}*/
-
-.delete-btn .complete-btn {
-    /*background-color: #c7effc;*/
-    background-color: #c7effc; /* 버튼 배경색 */
-    border: none; /* 테두리 없애기 */
-    border-radius: 3px; /* 테두리 반경 설정 */
-    color: black; /* 글씨색 검정으로 설정 */
+button {
+    background-color: #c7effc;
+    border: none;
+    color: black;
+    font-size: 12px;
+    padding: 6px 4px;
 }
