style: todolist 버튼 스타일 클래스명으로 적용시키기

--- a/조이-안지유/week1/todoList/styles.css
+++ b/조이-안지유/week1/todoList/styles.css
@@ -59,7 +59,8 @@ li {
     font-weight: bold;
 }
 
-button {
+/*button {*/
+.complete-btn .delete-btn {
     background-color: #c7effc;
     border: none;
     color: black;
