--- a/조이-안지유/week1/todoList/styles.css
+++ b/조이-안지유/week1/todoList/styles.css
@@ -60,7 +60,7 @@ li {
 }
 
 /*button {*/
-.complete-btn .delete-btn {
+.complete-btn, .delete-btn {
     background-color: #c7effc;
     border: none;
     color: black;
