--- a/조이-안지유/modal/modal_react/src/styles/modal.css
+++ b/조이-안지유/modal/modal_react/src/styles/modal.css
@@ -1,12 +1,13 @@
 .modal_container {
     position: fixed;
-    top: 30%;
-    left: 50%;
-    transform: translate(-50%, 0);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     background: rgba(0, 0, 0, 0.5);
-    /* 왜 얘네를 적용하면 안되는 걸까 */
-    /*width: 100%;*/
-    /*height: 100%;*/
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .modal {
