--- a/연두-김태연/week7/src/App.css
+++ b/연두-김태연/week7/src/App.css
@@ -6,25 +6,20 @@ body{
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin-top: 55px;
+  margin-top: 60px;
 }
 
-.poster{
+.poster {
   border-radius: 10px;
   margin: auto;
   background-color: #05072c;
   color: white;
   position: relative;
-  width: calc(16.666% - 3%); /* 6열을 맞추기 위한 너비 조정, 여백 제거 */
+  width: calc(25% - 3%); 
   margin-bottom: 4%;
-  height: auto;  
- }
-
-/*사진 크기*/
-.poster img{
-  max-width: 100%;
-  max-height: 100%;
+  height: auto;
 }
+
 
 .overview {
   position: absolute;
@@ -42,7 +37,7 @@ body{
   box-sizing: border-box;
   padding: 20px;
   overflow: hidden;
-  text-overflow: ellipsis; /*텍스트가 요소의 범위를 넘어갈 때 자동으로 자른다.*/
+  text-overflow: ellipsis; 
 }
 
 .poster:hover .overview {
@@ -74,3 +69,35 @@ body{
   margin: 0;
 }
 
+.poster img {
+  width: 100%;
+  height: 100%;
+  border-radius: 5px; 
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;/* 페이지네이션 바!! 고정 ( 스크롤하면 같이 위로 가서 고정시킴)*/
+  bottom: 40px; 
+  left: 50%;
+  transform: translateX(-50%);
+  color:white;
+}
+
+
+.pagination button {
+  padding: 5px 10px;
+  margin: 0 5px;
+  background-color: #333;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.pagination button:disabled {
+  background-color: #666;
+  cursor: not-allowed;
+}
